--- a/build.xml
+++ b/build.xml
@@ -241,6 +241,14 @@
       <factory name="net.sf.saxon.TransformerFactoryImpl" />
       <mapper type="glob" from="*.xml" to="*.html" />
     </xslt>
+
+    <xslt basedir="${test.transformed.dir}" destdir="${test.transformed.html.dir}-en"
+      style="${src.dir}/xsl/xrechnung-html.xsl" includes="**/*.xml">
+      <classpath location="${lib.dir}/${saxon.jar}" />
+      <factory name="net.sf.saxon.TransformerFactoryImpl" />
+      <param name="lang" type="STRING" expression="en"/>
+      <mapper type="glob" from="*.xml" to="*.html" />
+    </xslt>
   </target>
 
   <target name="transform-xr-to-pdf" depends="transform-to-xr, prepare-fop">
