--- a/build.xml
+++ b/build.xml
@@ -366,8 +366,10 @@
   <target name="dist-only">
     <zip
       destfile="${dist.dir}/xrechnung-${xrechnung.version.full}-${ant.project.name}-${xr-visualization.version.full}.zip">
+      
       <zipfileset dir="${src.dir}" excludes="README.md"/>
       <zipfileset dir="." includes="README.md" />
+      <zipfileset dir="doc" prefix="doc" />
 
     </zip>
   </target>
