--- a/build.xml
+++ b/build.xml
@@ -21,7 +21,7 @@
     <property name="saxon.jar" value="saxon-he-10.6.jar"/>
 
     <!-- Naming -->
-    <property name="xr-visualization.version.full" value="2023-01-31"/>
+    <property name="xr-visualization.version.full" value="2023-04-31-SNAPSHOT"/>
 
     <!-- Test resources -->
     <property name="xrechnung.version.major.minor" value="2.3"/>
