--- a/build.xml
+++ b/build.xml
@@ -21,7 +21,7 @@
     <property name="saxon.jar" value="saxon-he-10.6.jar"/>
 
     <!-- Naming -->
-    <property name="xr-visualization.version.full" value="2023-11-15-SNAPSHOT"/>
+    <property name="xr-visualization.version.full" value="2023-11-15"/>
 
     <!-- Test resources -->
     <property name="xrechnung.version.major.minor" value="3.0"/>
@@ -37,7 +37,7 @@
 
     <!-- Validator Configuration XRechnung -->
     <property name="validator.config.proj.name" value="validator-configuration-xrechnung"/>
-    <property name="validator.config.release.date" value="2023-09-22"/>
+    <property name="validator.config.release.date" value="2023-11-15"/>
 
     <property name="validator.config.download.url"
         value="${github.group.url}/${validator.config.proj.name}/releases/download/release-${validator.config.release.date}/${validator.config.proj.name}_${xrechnung.version.full}_${validator.config.release.date}.zip"/>
